<android.support.constraint.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/fondo"
android:layout_margin="5dp"
android:padding="5dp">





<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_constraintTop_toTopOf="parent">



    <android.support.constraint.ConstraintLayout
        android:layout_width="1dp"
        android:layout_weight="1"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnRefreshScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRefreshScan">


            <TextView
                android:id="@+id/tvWifiScan"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginVertical="6dp"
        android:background="@android:color/black"
        android:backgroundTint="@color/colorPrimary" />



    <android.support.constraint.ConstraintLayout
        android:layout_weight="1"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleParamPreCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="72dp"
            android:layout_marginTop="8dp"
            android:text="Datos"
            android:theme="@style/MyTxtTitulo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textMuestras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/param_muestras"
            android:theme="@style/MyTxtVar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleParamPreCap" />

        <EditText
            android:id="@+id/editMuestras"
            style="@style/Param"
            android:text="100"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textMuestras" />

        <TextView
            android:id="@+id/textPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="8dp"
            android:text="@string/param_periodo"
            android:theme="@style/MyTxtVar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleParamPreCap" />

        <EditText
            android:id="@+id/editPeriodo"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            android:inputType="numberDecimal"
            android:text="0.001"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPeriodo" />

        <TextView
            android:id="@+id/textRepeticiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/MyTxtVar"
            android:text="@string/param_repeticiones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editMuestras" />

        <EditText
            android:id="@+id/editRepeticiones"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:inputType="numberDecimal"
            android:text="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRepeticiones" />

        <TextView
            android:id="@+id/textTiempo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="115dp"
            android:layout_marginTop="8dp"
            android:text="@string/param_tiempo"
            android:theme="@style/MyTxtVar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPeriodo" />

        <EditText
            android:id="@+id/editTiempo"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="112dp"
            android:inputType="numberDecimal"
            android:text="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTiempo" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:elevation="2dp"
            android:text="@string/param_start"
            android:theme="@style/MyBtnAceptar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>



</android.support.constraint.ConstraintLayout>
